# wimic

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: toolchain-linux-clang.cmake  toolchain-macos-clang.cmake  toolchain-windows-clang-cross.cmake  toolchain-windows-clang.cmake
src/: main.cpp
